--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>
-          Events4me
-      </title>
+      <title>Events4me</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
       <script src="./js/functions.js" type="text/javascript"></script>
       <script src="./js/index.js" type="text/javascript"></script>
