Fixed relative links

--- a/events.html
+++ b/events.html
@@ -26,9 +26,9 @@
         </div>
         <nav class="navigation conference">
             <ul>
-                <li><a href="../profile">- Главная -</a></li>
-                <li><a href="./events">- Все конференции -</a></li>
-                <li><a class="outLogin" href="./login">- Выход -</a></li>
+                <li><a href="profile.html">- Главная -</a></li>
+                <li><a href="events.html">- Все конференции -</a></li>
+                <li><a class="outLogin" href="login.html">- Выход -</a></li>
             </ul>
         </nav>
     </heder>
@@ -50,7 +50,7 @@
         </div>
         <div class="btnTop">
             <div class="col-md-6">
-                <a class="btn btn-primary btn-lg btnConf" href="./events/add" role="button">Добавить конференцию</a>
+                <a class="btn btn-primary btn-lg btnConf" href="./events/add.html" role="button">Добавить конференцию</a>
             </div>
         </div>
         <div class="eventsList" id="eventsList">
