--- a/events/card.html
+++ b/events/card.html
@@ -24,11 +24,11 @@
         </div>
         <nav class="navigation conference">
             <ul>
-                <li><a href="../profile">- Главная -</a></li>
-                <li><a href="../events">- Все конференции -</a></li>
-                <li><a class="outLogin" href="../login">- Выход -</a></li>
-                <li><a href="./card">- Конференция -</a></li>
-                <li><a href="./card/users">- Пользователи -</a></li>
+                <li><a href="../profile.html">- Главная -</a></li>
+                <li><a href="../events.html">- Все конференции -</a></li>
+                <li><a class="outLogin" href="../login.html">- Выход -</a></li>
+                <li><a href="">- Конференция -</a></li>
+                <li><a href="card/users.html">- Пользователи -</a></li>
             </ul>
         </nav>
     </heder>
