--- a/events/card/edit.html
+++ b/events/card/edit.html
@@ -17,11 +17,11 @@
   <body>
     <heder>
     	<div class="top">
-    		<a href=""><img src="./img/Group.png" alt=""></a>
+    		<a href=""><img src="../../img/Group.png" alt=""></a>
     		<a href="https://apps.apple.com/us/app/%D0%BC%D0%BE%D0%B8-%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D1%8F/id1463771812?l=ru&ls=1"
-    		   target="_blank"><img src="./img/appstore2.png" alt='AppStore'></a>
+    		   target="_blank"><img src="../../img/appstore2.png" alt='AppStore'></a>
     		<a class="app_icons" href="https://play.google.com/store/apps/details?id=ru.spb.iac.events4me" target="_blank"><img
-    				src="./img/ggplay.png" alt="GooglePlay"></a>
+    				src="../../img/ggplay.png" alt="GooglePlay"></a>
     	</div>
     	<div class = 'head'>
     		<!--<img src="./src/banner-main.png" alt="">-->
@@ -30,9 +30,9 @@
     	</div>
     	<nav class="navigation conference">
     		<ul>
-    			<li><a href="../../profile">- Главная -</a></li>
-    			<li><a href="../../events">- Все конференции -</a></li>
-    			<li><a class="outLogin" href="../../login">- Выход -</a></li>
+    			<li><a href="../../profile.html">- Главная -</a></li>
+    			<li><a href="../../events.html">- Все конференции -</a></li>
+    			<li><a class="outLogin" href="../../login.html">- Выход -</a></li>
     		</ul>
     	</nav>
     </heder>
