--- a/events/card/users.html
+++ b/events/card/users.html
@@ -6,17 +6,17 @@
 
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="../../../css/style.css">
-      <link rel="stylesheet" href="../../../css/userListStyle.css">
+      <link rel="stylesheet" href="../../css/style.css">
+      <link rel="stylesheet" href="../../css/userListStyle.css">
   </head>
   <body>
     <heder>
         <div class="top">
-            <a href=""><img src="../../../img/Group.png" alt=""></a>
+            <a href=""><img src="../../img/Group.png" alt=""></a>
             <a href="https://apps.apple.com/us/app/%D0%BC%D0%BE%D0%B8-%D1%81%D0%BE%D0%B1%D1%8B%D1%82%D0%B8%D1%8F/id1463771812?l=ru&ls=1"
-               target="_blank"><img src="../../../img/appstore2.png" alt='AppStore'></a>
+               target="_blank"><img src="../../img/appstore2.png" alt='AppStore'></a>
             <a class="app_icons" href="https://play.google.com/store/apps/details?id=ru.spb.iac.events4me" target="_blank"><img
-                    src="../../../img/ggplay.png" alt="GooglePlay"></a>
+                    src="../../img/ggplay.png" alt="GooglePlay"></a>
         </div>
         <div class='head'>
             <!--<img src="./src/banner-main.png" alt="">-->
@@ -25,10 +25,10 @@
         </div>
         <nav class="navigation userList">
             <ul>
-                <li><a href="../../profile">- Главная -</a></li>
-                <li><a href="../../events">- Все конференции -</a></li>
-                <li><a class="outLogin" href="../../login">- Выход -</a></li>
-                <li><a href="../card">- Конференция -</a></li>
+                <li><a href="../../profile.html">- Главная -</a></li>
+                <li><a href="../../events.html">- Все конференции -</a></li>
+                <li><a class="outLogin" href="../../login.html">- Выход -</a></li>
+                <li><a href="../card.html">- Конференция -</a></li>
                 <li><a href="">- Пользователи -</a></li>
             </ul>
         </nav>
@@ -74,14 +74,14 @@
     </div>
 
     <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
-    <script src="../../../js/date.js"></script>
-    <script src="../../../js/functions.js" type="text/javascript"></script>
-    <script type="text/javascript" src="../../../js/userList.js"></script>
-    <script src="../../../js/config.js" type="text/javascript"></script>
-    <script src="../../../js/API.js" type="text/javascript"></script>
+    <script src="../../js/date.js"></script>
+    <script src="../../js/functions.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../../js/userList.js"></script>
+    <script src="../../js/config.js" type="text/javascript"></script>
+    <script src="../../js/API.js" type="text/javascript"></script>
     <footer>
         <div class='foot'>
-            <img src="../../../img/GroupWhite.png" alt="GroupWhite">
+            <img src="../../img/GroupWhite.png" alt="GroupWhite">
             <div class='border'></div>
             <div class='author'>Дизайн,<br> разработка<br> и техническая поддержка ресурса:
                 <div class="iac">IAC Mobile Dev Group</div>
