--- a/profile.html
+++ b/profile.html
@@ -28,9 +28,9 @@
         </div>
         <nav class="navigation index">
             <ul id="menu">
-                <li><a href="/profile">- Главная -</a></li>
-                <li><a href="/events">- Все конференции -</a></li>
-                <li><a class="outLogin" href="/login">- Выход -</a></li>
+                <li><a href="profile.html">- Главная -</a></li>
+                <li><a href="events.html">- Все конференции -</a></li>
+                <li><a class="outLogin" href="login.html">- Выход -</a></li>
             </ul>
         </nav>
     </heder>
