--- a/agreement.html
+++ b/agreement.html
@@ -24,9 +24,9 @@
         </div>
         <nav class="navigation agreement">
             <ul>
-                <li><a href="..">- Главная -</a></li>
-                <li><a href="/agreement">- Соглашение -</a></li>
-                <li><a href="/login">- Авторизация -</a></li>
+                <li><a href="index.html">- Главная -</a></li>
+                <li><a href="agreement.html">- Соглашение -</a></li>
+                <li><a href="login.html">- Авторизация -</a></li>
             </ul>
         </nav>
     </heder>
