--- a/events/add.html
+++ b/events/add.html
@@ -7,7 +7,7 @@
               type="text/javascript"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js" type="text/javascript"></script>
-      <script type="text/javascript" src="../../js/ConfNew.js"></script>
+      <script type="text/javascript" src="../js/ConfNew.js"></script>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/confCardInput.css">
@@ -29,9 +29,9 @@
         </div>
         <nav class="navigation conference">
           <ul>
-              <li><a href="../profile">- Главная -</a></li>
-              <li><a href="../events">- Все конференции -</a></li>
-              <li><a class="outLogin" href="../login">- Выход -</a></li>
+              <li><a href="../profile.html">- Главная -</a></li>
+              <li><a href="../events.html">- Все конференции -</a></li>
+              <li><a class="outLogin" href="../login.html">- Выход -</a></li>
           </ul>
       </nav>
   </heder>
@@ -136,10 +136,10 @@
   </div>
   <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
 
-  <script src="../../js/date.js"></script>
-  <script type="text/javascript" src="../../js/functions.js"></script>
-  <script type="text/javascript" src="../../js/map.js"></script>
-  <script type="text/javascript" src="../../js/config.js"></script>
+  <script src="../js/date.js"></script>
+  <script type="text/javascript" src="../js/functions.js"></script>
+  <script type="text/javascript" src="../js/map.js"></script>
+  <script type="text/javascript" src="../js/config.js"></script>
   <footer>
       <div class='foot'>
           <img src="../img/GroupWhite.png" alt="GroupWhite">
