--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>Events4me</title>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-      <script src="./js/functions.js" type="text/javascript"></script>
-      <script src="./js/index.js" type="text/javascript"></script>
-      <script src="./js/config.js" type="text/javascript"></script>
+    <title>Events4me</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="./js/functions.js" type="text/javascript"></script>
+    <script src="./js/index.js" type="text/javascript"></script>
+    <script src="./js/config.js" type="text/javascript"></script>
 
-      <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <heder>
@@ -25,9 +25,9 @@
         </div>
         <nav class="navigation index">
             <ul>
-                <li><a href="">- Главная -</a></li>
-                <li><a href="/agreement">- Соглашение -</a></li>
-                <li><a href="/login">- Авторизация -</a></li>
+                <li><a href="index.html">- Главная -</a></li>
+                <li><a href="agreement.html">- Соглашение -</a></li>
+                <li><a href="login.html">- Авторизация -</a></li>
             </ul>
         </nav>
     </heder>
