Fixed adaptive design for site header

--- a/agreement.html
+++ b/agreement.html
@@ -26,6 +26,7 @@
             <ul>
                 <li><a href="index.html">- Главная -</a></li>
                 <li><a href="agreement.html">- Соглашение -</a></li>
+                <div class="cap"></div>
                 <li><a href="login.html">- Авторизация -</a></li>
             </ul>
         </nav>
