--- a/events/add.html
+++ b/events/add.html
@@ -31,6 +31,7 @@
           <ul>
               <li><a href="../profile.html">- Главная -</a></li>
               <li><a href="../events.html">- Все конференции -</a></li>
+              <div class="cap"></div>
               <li><a class="outLogin" href="../login.html">- Выход -</a></li>
           </ul>
       </nav>
