--- a/events/card/users.html
+++ b/events/card/users.html
@@ -27,9 +27,10 @@
             <ul>
                 <li><a href="../../profile.html">- Главная -</a></li>
                 <li><a href="../../events.html">- Все конференции -</a></li>
-                <li><a class="outLogin" href="../../login.html">- Выход -</a></li>
                 <li><a href="../card.html">- Конференция -</a></li>
                 <li><a href="">- Пользователи -</a></li>
+                <div class="cap"></div>
+                <li><a class="outLogin" href="../../login.html">- Выход -</a></li>
             </ul>
         </nav>
     </heder>
