--- a/events/card.html
+++ b/events/card.html
@@ -26,9 +26,10 @@
             <ul>
                 <li><a href="../profile.html">- Главная -</a></li>
                 <li><a href="../events.html">- Все конференции -</a></li>
-                <li><a class="outLogin" href="../login.html">- Выход -</a></li>
                 <li><a href="">- Конференция -</a></li>
                 <li><a href="card/users.html">- Пользователи -</a></li>
+                <div class="cap"></div>
+                <li><a class="outLogin" href="../login.html">- Выход -</a></li>
             </ul>
         </nav>
     </heder>
