--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
             <ul>
                 <li><a href="index.html">- Главная -</a></li>
                 <li><a href="agreement.html">- Соглашение -</a></li>
-                <li><a href="login.html">- Авторизация -</a></li>
+                <div class="cap"></div>
+                <li><a href="">- Авторизация -</a></li>
             </ul>
         </nav>
     </heder>
