Integrated font-awesome icons in navigation buttons

--- a/events/card.html
+++ b/events/card.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>Events4me</title>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <link rel="stylesheet" href="../css/fontawesome.all.min.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/ConfCard.css">
       <link rel="stylesheet" href="../css/bootstrap-grid.css">
@@ -24,12 +25,23 @@
         </div>
         <nav class="navigation conference">
             <ul>
-                <li><a href="../profile.html">- Главная -</a></li>
-                <li><a href="../events.html">- Все конференции -</a></li>
-                <li><a href="">- Конференция -</a></li>
-                <li><a href="card/users.html">- Пользователи -</a></li>
+                <li><a href="../profile.html">
+                    <i class="fas fa-address-card"></i>
+                    <span>- Профиль -</span>
+                </a></li>
+                <li><a href="../events.html">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>- Все конференции -</span>
+                </a></li>
+                <li><a href="card/users.html">
+                    <i class="fas fa-users"></i>
+                    <span>- Пользователи -</span>
+                </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="../login.html">- Выход -</a></li>
+                <li><a class="outLogin" href="../login.html">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>- Выход -</span>
+                </a></li>
             </ul>
         </nav>
     </heder>
