--- a/events/card/users.html
+++ b/events/card/users.html
@@ -6,6 +6,7 @@
 
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="../../css/fontawesome.all.min.css">
       <link rel="stylesheet" href="../../css/style.css">
       <link rel="stylesheet" href="../../css/userListStyle.css">
   </head>
@@ -25,12 +26,27 @@
         </div>
         <nav class="navigation userList">
             <ul>
-                <li><a href="../../profile.html">- Главная -</a></li>
-                <li><a href="../../events.html">- Все конференции -</a></li>
-                <li><a href="../card.html">- Конференция -</a></li>
-                <li><a href="">- Пользователи -</a></li>
+                <li><a href="../../profile.html">
+                    <i class="fas fa-address-card"></i>
+                    <span>- Профиль -</span>
+                </a></li>
+                <li><a href="../../events.html">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>- Все конференции -</span>
+                </a></li>
+                <li><a href="../card.html">
+                    <i class="fas fa-calendar-day"></i>
+                    <span>- Конференция -</span>
+                </a></li>
+                <li><a href="card/users.html">
+                    <i class="fas fa-users"></i>
+                    <span>- Пользователи -</span>
+                </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="../../login.html">- Выход -</a></li>
+                <li><a class="outLogin" href="../../login.html">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>- Выход -</span>
+                </a></li>
             </ul>
         </nav>
     </heder>
