--- a/events.html
+++ b/events.html
@@ -3,9 +3,10 @@
   <head>
       <meta charset="utf-8">
       <title>Events4me</title>
+
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-      <!--<link rel="stylesheet" href="./css/bootstrap.min.css">-->
+      <link rel="stylesheet" href="./css/fontawesome.all.min.css">
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="./css/Confstyle.css">
   </head>
@@ -20,31 +21,35 @@
                     src="./img/ggplay.png" alt="GooglePlay"></a>
         </div>
         <div class='head'>
-            <!--<img src="./src/banner-main.png" alt="">-->
             <div class='testImg'></div>
             <div class="headText">Мои события: конференции и интересные события в Санкт-Петербурге</div>
         </div>
         <nav class="navigation conference">
             <ul>
-                <li><a href="profile.html">- Главная -</a></li>
-                <li><a href="events.html">- Все конференции -</a></li>
+                <li><a href="profile.html">
+                    <i class="fas fa-address-card"></i>
+                    <span>- Профиль -</span>
+                </a></li>
+                <li><a href="events.html">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>- Все конференции -</span>
+                </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="login.html">- Выход -</a></li>
+                <li><a class="outLogin" href="login.html">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <span>- Выход -</span>
+                </a></li>
             </ul>
         </nav>
     </heder>
     <div id="content">
         <div class='search'>
-
             <div class="blocks">
                 <div class='input-group'>
                     <input type="text" class="form-control" id="searchConf" placeholder="Поиск...">
-
                     <span class="input-group-btn">
-    					<button class="btn btn-search" id="searchBtn" type="button" disabled><i
-                                class="fa fa-search fa-fw"></i></button>
+    					<button class="btn btn-search" id="searchBtn" type="button" disabled><i class="fa fa-search fa-fw"></i></button>
     				</span>
-
                 </div>
             </div>
             <a id="todaysConf">Показать только сегодняшние</a>
