--- a/events/add.html
+++ b/events/add.html
@@ -9,6 +9,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js" type="text/javascript"></script>
       <script type="text/javascript" src="../js/ConfNew.js"></script>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
+      <link rel="stylesheet" href="../css/fontawesome.all.min.css">
       <link rel="stylesheet" href="../css/style.css">
       <link rel="stylesheet" href="../css/confCardInput.css">
       <link rel="stylesheet" href="../css/bootstrap-grid.css">
@@ -29,16 +30,24 @@
         </div>
         <nav class="navigation conference">
           <ul>
-              <li><a href="../profile.html">- Главная -</a></li>
-              <li><a href="../events.html">- Все конференции -</a></li>
+              <li><a href="../profile.html">
+                  <i class="fas fa-address-card"></i>
+                  <span>- Профиль -</span>
+              </a></li>
+              <li><a href="../events.html">
+                  <i class="fas fa-calendar-alt"></i>
+                  <span>- Все конференции -</span>
+              </a></li>
               <div class="cap"></div>
-              <li><a class="outLogin" href="../login.html">- Выход -</a></li>
+              <li><a class="outLogin" href="../login.html">
+                  <i class="fas fa-sign-out-alt"></i>
+                  <span>- Выход -</span>
+              </a></li>
           </ul>
       </nav>
   </heder>
   <div id="content">
       <form class='confInfo' ng-controller='addEvent'>
-
           <div class="row">
               <div class="col-md-12">
                   <div class="col-lg-6 col-md-12 text-left">
