--- a/events/card/edit.html
+++ b/events/card/edit.html
@@ -2,14 +2,13 @@
 <html>
   <head>
   	<meta charset="utf-8">
+  	<title>Events4me</title>
   	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=38ba0756-4142-41c3-925c-5151cc077bec" type="text/javascript"></script>
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.32/angular.min.js" type="text/javascript"></script>
 
-  	<title>
-  		Events4me
-  	</title>
   	<link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/fontawesome.all.min.css">
   	<link rel="stylesheet" href="../../css/style.css">
   	<link rel="stylesheet" href="../../css/confCardInput.css">
   	<link rel="stylesheet" href="../../css/bootstrap-grid.css">
@@ -23,18 +22,26 @@
     		<a class="app_icons" href="https://play.google.com/store/apps/details?id=ru.spb.iac.events4me" target="_blank"><img
     				src="../../img/ggplay.png" alt="GooglePlay"></a>
     	</div>
-    	<div class = 'head'>
-    		<!--<img src="./src/banner-main.png" alt="">-->
-    		<div class = 'testImg'></div>
+    	<div class='head'>
+    		<div class='testImg'></div>
     		<div class="headText">Мои события: конференции и интересные события в Санкт-Петербурге</div>
     	</div>
     	<nav class="navigation conference">
-    		<ul>
-    			<li><a href="../../profile.html">- Главная -</a></li>
-    			<li><a href="../../events.html">- Все конференции -</a></li>
+        <ul>
+          <li><a href="../../profile.html">
+            <i class="fas fa-address-card"></i>
+            <span>- Профиль -</span>
+          </a></li>
+          <li><a href="../../events.html">
+            <i class="fas fa-calendar-alt"></i>
+            <span>- Все конференции -</span>
+          </a></li>
           <div class="cap"></div>
-    			<li><a class="outLogin" href="../../login.html">- Выход -</a></li>
-    		</ul>
+          <li><a class="outLogin" href="../../login.html">
+            <i class="fas fa-sign-out-alt"></i>
+            <span>- Выход -</span>
+          </a></li>
+        </ul>
     	</nav>
     </heder>
     <form class='confInfo' ng-controller='myController'>
@@ -142,10 +149,10 @@
     <script type="text/javascript" src="../../js/config.js"></script>
     <script type="text/javascript" src="../../js/mapInput.js"></script>
     <footer>
-    	<div class = 'foot'>
+    	<div class='foot'>
     		<img src="../../img/GroupWhite.png" alt="GroupWhite">
-    		<div class = 'border'></div>
-    		<div class = 'author'>Дизайн,<br> разработка<br> и техническая поддержка ресурса: <div class="iac">IAC Mobile Dev Group</div></div>
+    		<div class='border'></div>
+    		<div class='author'>Дизайн,<br> разработка<br> и техническая поддержка ресурса: <div class="iac">IAC Mobile Dev Group</div></div>
     	</div>
     </footer>
   </body>
