Added logout request

--- a/events/card/users.html
+++ b/events/card/users.html
@@ -43,7 +43,7 @@
                     <span>- Пользователи -</span>
                 </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="../../login.html">
+                <li><a id="logout-button" class="outLogin" href="../../login.html">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>- Выход -</span>
                 </a></li>
@@ -58,11 +58,9 @@
             <div class="blocks">
                 <div class='input-group'>
                     <input type="text" class="form-control" id="searchUser" placeholder="Поиск...">
-
                     <span class="input-group-btn">
-    					<button class="btn btn-search" id="searchBtn" type="button" disabled><i
-                                class="fa fa-search fa-fw"></i></button>
-    				</span>
+              <button class="btn btn-search" id="searchBtn" type="button" disabled><i class="fa fa-search fa-fw"></i></button>
+            </span>
 
                 </div>
             </div>
