--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
                     <span>- Все конференции -</span>
                 </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="login.html">
+                <li><a href="login.html" id="logout-button" class="outLogin">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>- Выход -</span>
                 </a></li>
