--- a/events/card.html
+++ b/events/card.html
@@ -38,7 +38,7 @@
                     <span>- Пользователи -</span>
                 </a></li>
                 <div class="cap"></div>
-                <li><a class="outLogin" href="../login.html">
+                <li><a id="logout-button" class="outLogin" href="../login.html">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>- Выход -</span>
                 </a></li>
